--- a/SiH_VR/SiH_Game.csproj
+++ b/SiH_VR/SiH_Game.csproj
@@ -185,7 +185,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PatchLoader.cs" />
-    <Compile Include="Patches\Patch_SteamVR_Render.cs" />
+    <Compile Include="Patches\Patch_SteamVR_Render_OnEnable.cs" />
     <Compile Include="SiHContext.cs" />
     <Compile Include="SiHInterpreter.cs" />
     <Compile Include="SiHSeatedMode.cs" />
@@ -193,7 +193,6 @@
     <Compile Include="VRPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Cameras\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
